[feat]: interceptor for auth.